Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -1,6 +1,8 @@
 ---
 title: "Introduction"
 description: "Welcome to the new home for your documentation"
+sidebarTitle: "Intro"
+mode: "wide"
 ---
 
 ## Setting up
