Update documentation structure and content: revised logo paths, enhanced navigation links, and expanded sections on Phinite's features and user roles. Added error handling information and improved the introduction for clarity.

--- a/index.mdx
+++ b/index.mdx
@@ -1,59 +1,110 @@
 ---
-title: "Introduction"
-description: "Welcome to the new home for your documentation"
-sidebarTitle: "Intro"
+title: "Phinite Documentation"
+description: "Build assistants, workflows, tools, and integrations with enterprise controls."
+sidebarTitle: "Home"
 ---
 
-## Setting up
+## Start here
 
-Get your documentation site up and running in minutes.
+<CardGroup cols={3}>
+  <Card title="Welcome" icon="sparkles" href="/welcome/about-phinite">About Phinite and this manual</Card>
+  <Card title="Getting Started" icon="rocket" href="/getting-started/enterprise-setup">Set up your org and first workspace</Card>
+  <Card title="User Management" icon="users" href="/getting-started/user-management">Invite users and manage roles</Card>
+  <Card title="User Roles" icon="id-badge" href="/getting-started/user-roles">Capabilities by role (Admin, Developer, Tester, Viewer)</Card>
+  <Card title="Workspace Overview" icon="grid" href="/getting-started/workspace-overview">Understand org → workspace → project</Card>
+  <Card title="Create Workspace" icon="plus-square" href="/getting-started/creating-workspace">Create your first workspace and project</Card>
+  <Card title="Sign Up" icon="user-plus" href="/getting-started/signing-up">Create and verify your account</Card>
+  <Card title="Invite Users" icon="envelope" href="/getting-started/inviting-users">Add teammates and assign roles</Card>
+  <Card title="Access Controls" icon="shield" href="/getting-started/access-controls">Security and permissions overview</Card>
+  <Card title="Licensing" icon="key" href="/getting-started/license-distribution">Apply enterprise license</Card>
+  <Card title="Shortcuts" icon="bolt" href="/reference/shortcuts">Productivity shortcuts</Card>
+  <Card title="FAQs" icon="circle-question" href="/reference/faqs">Common questions</Card>
+  
+</CardGroup>
 
-<Card title="Start here" icon="rocket" horizontal href="/quickstart">
-  Follow our three step quickstart guide.
-</Card>
+## Build assistants
 
-## Make it yours
+<CardGroup cols={3}>
+  <Card title="Assistant Overview" icon="bot" href="/assistants/overview">Types, components, and workflows</Card>
+  <Card title="Assistant Types" icon="layers" href="/assistants/types">Conversational, Email, Autonomous</Card>
+  <Card title="Components" icon="puzzle-piece" href="/assistants/components">Flows, Tools, Triggers, Channels, Environments</Card>
+  <Card title="Flows" icon="diagram-project" href="/assistants/components/flows">How flows power assistants</Card>
+  <Card title="Tools" icon="wrench" href="/assistants/components/tools">Extend assistants with actions</Card>
+  <Card title="Channels" icon="comments" href="/assistants/components/channels">Where assistants run</Card>
+</CardGroup>
 
-Design a docs site that looks great and empowers your users.
+## Flowgen Studio (Workflow Builder)
 
-/
+<CardGroup cols={3}>
+  <Card title="Overview" icon="diagram-project" href="/flowgen/overview">Visual workflow builder</Card>
+  <Card title="Methods" icon="magic" href="/flowgen/methods">Copilot vs Manual methods</Card>
+  <Card title="Blocks" icon="cubes" href="/flowgen/blocks">Start, Agents, Tool, End</Card>
+  <Card title="Connections" icon="share-nodes" href="/flowgen/connections">Edges, handles, conditionals</Card>
+  <Card title="RAG Management" icon="book" href="/flowgen/rag-management">Data sources and collections</Card>
+  <Card title="Publishing" icon="upload" href="/flowgen/publishing">From draft to deployment</Card>
+</CardGroup>
 
-<Columns cols={2}>
-  <Card title="Edit locally" icon="pen-to-square" href="/development">
-    Edit your docs locally and preview them in real time.
-  </Card>
-  <Card title="Customize your site" icon="palette" href="/essentials/settings">
-    Customize the design and colors of your site to match your brand.
-  </Card>
-  <Card title="Set up navigation" icon="map" href="/essentials/navigation">
-    Organize your docs to help users find what they need and succeed with your product.
-  </Card>
-  <Card title="API documentation" icon="terminal" href="/api-reference/introduction">
-    Auto-generate API documentation from OpenAPI specifications.
-  </Card>
-</Columns>
+## DevStudio (Tool Builder)
 
-## Create beautiful pages
+<CardGroup cols={3}>
+  <Card title="Overview" icon="screwdriver-wrench" href="/devstudio/overview">Build and test tools</Card>
+  <Card title="Methods" icon="lightbulb" href="/devstudio/methods">Copilot and manual coding</Card>
+  <Card title="Tool Types" icon="gears" href="/devstudio/types">Custom vs prebuilt integrations</Card>
+  <Card title="Prebuilt Integrations" icon="plug" href="/devstudio/prebuilt-tools">Gmail, Sheets, Jira/Zendesk</Card>
+  <Card title="Versioning" icon="code-branch" href="/devstudio/versioning">Draft, publish, rollback</Card>
+  <Card title="Testing Tools" icon="flask" href="/devstudio/testing-tools">Run and validate tools</Card>
+</CardGroup>
 
-Everything you need to create world-class documentation.
+## Triggers & Intents
 
-<Columns cols={2}>
-  <Card title="Write with MDX" icon="pen-fancy" href="/essentials/markdown">
-    Use MDX to style your docs pages.
-  </Card>
-  <Card title="Code samples" icon="code" href="/essentials/code">
-    Add sample code to demonstrate how to use your product.
-  </Card>
-  <Card title="Images" icon="image" href="/essentials/images">
-    Display images and other media.
-  </Card>
-  <Card title="Reusable snippets" icon="recycle" href="/essentials/reusable-snippets">
-    Write once and reuse across your docs.
-  </Card>
-</Columns>
+<CardGroup cols={3}>
+  <Card title="Overview" icon="bullseye" href="/triggers-intents/overview">How interactions start</Card>
+  <Card title="Intents" icon="comment-dots" href="/triggers-intents/intents">Detect user intent</Card>
+  <Card title="Triggers" icon="play" href="/triggers-intents/triggers">Webhooks and event triggers</Card>
+  <Card title="Create Intents" icon="wand-magic-sparkles" href="/triggers-intents/creating-intents">Define and test intents</Card>
+  <Card title="Prompt Training" icon="message" href="/triggers-intents/prompt-training">Train prompts for accuracy</Card>
+  <Card title="Testing Intents" icon="vial" href="/triggers-intents/testing-intents">Validate recognition quality</Card>
+</CardGroup>
 
-## Need inspiration?
+## Builds & Environments
 
-<Card title="See complete examples" icon="stars" href="https://mintlify.com/customers">
-  Browse our showcase of exceptional documentation sites.
-</Card>
+<CardGroup cols={3}>
+  <Card title="Overview" icon="server" href="/builds/overview">Build and deploy lifecycle</Card>
+  <Card title="Lifecycle" icon="recycle" href="/builds/lifecycle">From draft to deployed</Card>
+  <Card title="Publishing" icon="cloud-arrow-up" href="/builds/publishing">Publish flows and tools</Card>
+  <Card title="Configuration" icon="sliders" href="/builds/configuration">Build settings</Card>
+  <Card title="Environment Types" icon="diagram-project" href="/builds/environments">Dev, UAT, Prod</Card>
+</CardGroup>
+
+## Channels & Integrations
+
+<CardGroup cols={3}>
+  <Card title="Overview" icon="comments" href="/channels/overview">Supported channels and setup</Card>
+  <Card title="Supported Channels" icon="list" href="/channels/supported">Webchat, WhatsApp, Slack/Teams, Twilio, Email</Card>
+  <Card title="Webchat" icon="message" href="/channels/webchat">Embed chat on your site</Card>
+  <Card title="WhatsApp" icon="whatsapp" href="/channels/whatsapp">Configure WhatsApp channel</Card>
+  <Card title="Slack/Teams" icon="hashtag" href="/channels/slack-teams">Connect Slack or Teams</Card>
+  <Card title="Twilio" icon="phone" href="/channels/twilio">Voice with Twilio</Card>
+  <Card title="Email" icon="envelope" href="/channels/email">Email channel setup</Card>
+</CardGroup>
+
+## Observability & Billing
+
+<CardGroup cols={3}>
+  <Card title="Overview" icon="chart-line" href="/observability/overview">Monitor performance and errors</Card>
+  <Card title="Usage Metrics" icon="chart-bar" href="/observability/usage-metrics">Sessions, tokens, telephony</Card>
+  <Card title="Logs" icon="scroll" href="/observability/logs">Timeline, decisions, variables</Card>
+  <Card title="Filtering" icon="filter" href="/observability/filtering">Slice data and search</Card>
+  <Card title="Billing" icon="receipt" href="/observability/billing">Track costs and allocation</Card>
+</CardGroup>
+
+## Reference & Support
+
+<CardGroup cols={3}>
+  <Card title="API Reference" icon="terminal" href="/reference/api">Authenticate and call APIs</Card>
+  <Card title="Glossary" icon="book-open" href="/reference/glossary">Key terms and concepts</Card>
+  <Card title="Release Notes" icon="clipboard-list" href="/reference/release-notes">What’s new</Card>
+  <Card title="Error Codes" icon="triangle-exclamation" href="/support/error-codes">Common errors and fixes</Card>
+  <Card title="Build Failures" icon="xmark" href="/support/build-failures">Troubleshooting builds</Card>
+  <Card title="Contact Support" icon="life-ring" href="/support/contact">Get help</Card>
+</CardGroup>
