Remove obsolete image files and update documentation links to reflect new paths for improved clarity and organization.

--- a/getting-started/what-you-can-build.mdx
+++ b/getting-started/what-you-can-build.mdx
@@ -126,7 +126,7 @@ Phinite enables teams to build and deploy intelligent agents securely across cha
 
 ## Related Topics
 
-- [Workspaces Overview](/workspaces/overview)
-- [FlowGen Studio](/studio/flowgen)
-- [RBAC and Roles](/admin/rbac)
-- [Integrations and Environments](/integrations/overview)
+- [Workspaces Overview](/setup-account/workspace-overview)
+- [FlowGen Studio](/flowgen/overview)
+- [RBAC and Roles](/user-management/user-roles)
+- [Integrations and Environments](/channels/overview)
